@@ -37,6 +37,8 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 437790  valgrind reports "Conditional jump or move depends on uninitialised
         value" in memchr of macOS 10.12-10.15
 460616  disInstr(arm64): unhandled instruction 0x4E819402 (dotprod/ASIMDDP)
+463458  memcheck/tests/vcpu_fnfns fails when glibc is built for x86-64-v3
+463463  none/tests/amd64/fma fails when executed on a x86-64-v3 system
 466762  Add redirs for C23 free_sized() and free_aligned_sized()
 466884  Missing writev uninit padding suppression for _XSend
 471036  disInstr_AMD64: disInstr miscalculated next %rip on RORX imm8, m32/64, r32/6
@@ -70,6 +72,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
         Assertion '!sr_isError(sr)' failed."
 480488  Add support for FreeBSD 13.3
 480706  Unhandled syscall 325 (mlock2)
+481127  amd64: Implement VFMADD213 for Iop_MAddF32
 481131  [PATCH] x86 regtest: fix clobber lists in generated asm statements
 483786  Incorrect parameter indexing in FreeBSD clock_nanosleep syscall wrapper
 484002  Add suppression for invalid read in glibc's __wcpncpy_avx2() via wcsxfrm()
